loopwhile.LoopWhile.scala.error
Compilation error:
LoopWhile:1: error: not found: type False
while (isFacingWall():False) {
                      ^LoopWhile:2: error: not found: value foward
  foward();
  ^